modified minimum height to avoid extra whitespace

--- a/_sass/_photos.scss
+++ b/_sass/_photos.scss
@@ -1,15 +1,15 @@
 #photos {
   /* Prevent vertical gaps */
   line-height: 0;
-  min-height: 900px;
+  min-height: 800px;
   margin-top: 30px;
-   
+
   -webkit-column-count: 5;
   -webkit-column-gap:   0px;
   -moz-column-count:    5;
   -moz-column-gap:      0px;
   column-count:         5;
-  column-gap:           0px;  
+  column-gap:           0px;
 }
 
 #photos img {
