--- a/_sass/_post_list.scss
+++ b/_sass/_post_list.scss
@@ -1,5 +1,6 @@
 .post-list, .archive, .photos {
     background-color: $mid-grey;
+    min-height: 800px;
 }
 
 #post-list-header {
